public/styles/tweet.css
article.tweet {
  width: 100%;
  border: 3px solid rgb(118, 118, 118);
  margin-bottom: 20px;
}

.boxhover:hover {
  box-shadow: 5px 5px 10px gray;
}

article.tweet header {
  display: flex;
  width: 95%;
  margin: auto;
  flex-direction: row;
  background: unset;
  height: 100px;
  align-items: center;
  justify-content: space-between;
  position:static;
}

article.tweet p {
  display: flex;
  width: 95%;
  height: auto;
  align-items: center;
  margin: auto;
  padding-bottom: 10px;
  border-bottom: 3px solid rgb(118, 118, 118);
}

article.tweet footer {
  display: flex;
  width: 95%;
  margin: auto;
  height: 50px;
  align-items: center;
  justify-content: space-between;
}

span.name {
  display: flex;
  align-items: center;
}

span.name span {
  margin-left: 10px;
}

span.symbol {
  display: flex;
  width: 15%;
  justify-content: space-around;
  color:darkslateblue;

}

.hover:hover {
  color:goldenrod;
}

span.handle {
  color:rgb(175, 175, 175);
}

